Next release
============

- Add explicit dependencies on ``zope.deferredimport``,
  ``zope.deprecation``, and ``zope.proxy`` for forward compatibility
  reasons (``zope.component`` will stop relying on
  ``zope.deferredimport`` soon and although we use it directly, it's
  only a transitive dependency, and ''zope.deprecation`` and
  ``zope.proxy`` are used directly even though they're only transitive
  dependencies as well).

- Using ``model_url`` or ``model_path`` against a broken model graph
  (one with models that had a non-root model with a ``__name__`` of
  ``None``) caused an inscrutable error to be thrown: ( if not
  ``_must_quote[cachekey].search(s): TypeError: expected string or
  buffer``).  Now URLs and paths generated against graphs that have
  None names in intermediate nodes will replace the None with the
  empty string, and, as a result, the error won't be raised.  Of
  course the URL or path will still be bogus.

- Make it possible to have ``testing.DummyTemplateRenderer`` return
  some nondefault string representation.
 
0.6.9 (2009-02-16)
==================

Bug Fixes
---------

- lru cache was unstable under concurrency (big surprise!) when it
  tried to redelete a key in the cache that had already been deleted.
  Symptom: line 64 in put:del data[oldkey]:KeyError: '/some/path'.
  Now we just ignore the key error if we can't delete the key (it has
  already been deleted).

- Empty location names in model paths when generating a URL using
  ``repoze.bfg.model_url`` based on a model obtained via traversal are
  no longer ignored in the generated URL.  This means that if a
  non-root model object has a ``__name__`` of ``''``, the URL will
  reflect it (e.g. ``model_url`` will generate ``http://foo/bar//baz``
  if an object with the ``__name__`` of ``''`` is a child of bar and
  the parent of baz).  URLs generated with empty path segments are,
  however, still irresolveable by the model graph traverser on request